[package]
name = "server"
version = "0.1.0"
edition = "2018"
authors = ["elvis <elvisdedic@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5.2"
futures = "0.3.1"
blockchain = { version="0.1.3", path = "../blockchain"}
clap = "2.33.0"
reqwest = { version = "0.10.6", features = ["json"] }